  customized using the `--docdir` argument to `./configure`.
  (Nicolás Ojeda Bär, report by Daniel Bünzli, review by David Allsopp,
  Sébastien Hinderer, and Daniel Bünzli)

- #10671, #10672: webman: Fix misalignments in unordered lists by changing the
  CSS for coloring bullets
  (Wiktor Kuchta, review by Florian Angeletti)

### Compiler user-interface and warnings:

- #10328: Give more precise error when disambiguation could not possibly work.
  (Leo White, review by Gabriel Scherer and Florian Angeletti)

- #10361: Improve error messages for mismatched record and variant
  definitions.
  (Florian Angeletti, review by Gabriel Radanne and Gabriel Scherer)

- #10407: Produce more detailed error messages that contain full error traces
  when module inclusion fails.
  (Antal Spector-Zabusky, review by Florian Angeletti)

- #10531: add naked_pointers to ocamlc -config exporting NAKED_POINTERS from
  Makefile.config.
  (Damien Doligez, review by Mark Shinwell and Gabriel Scherer)

- #9116, #9118, #10582: Fix single-line source highlighting in the
  presence of tabs
  (Armaël Guéneau, review by Gabriel Scherer,
   split off from #9118 by Kate Deplaix, report by Ricardo M. Correia)

- #10488: Improve type variable name generation and recursive type detection
  when printing type errors; this ensures that the names given to type variables
  are always reused in the following portion of the trace and also removes
  spurious `as 'a`s in types.
  (Antal Spector-Zabusky, review by Florian Angeletti)

### Internal/compiler-libs changes:

- #1599: add unset directive to ocamltest to clear environment variables before
  running tests.
  (David Allsopp, review by Damien Doligez and Sébastien Hinderer)

- #8516: Change representation of class signatures
  (Leo White, review by Thomas Refis)

- #9444: -dtypedtree, print more explictly extra nodes in pattern ast.
  (Frédéric Bour, review by Gabriel Scherer)

- #10337: Normalize type_expr nodes on access